# ssl-cert-tree

./: .gitignore  README.md  pyproject.toml
examples/nested/: generate_certificates.py
src/: sslct.py
